# mr-rust-ml

./: Cargo.toml  README.md
src/: lib.rs
src/accuracy/: accuracy.rs
src/activation/: activation.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs  tanh.rs
src/layer/: activation_layer.rs  conv_layer.rs  fc_layer.rs  flatten_layer.rs  layer.rs  max_pooling_layer.rs  mod.rs
src/loss/: categorical_cross_entropy.rs  loss.rs  mod.rs  mse.rs
src/network/: cnn.rs  mlp.rs  mod.rs  network.rs
src/report/: html.rs  mod.rs  plot.rs  report.rs
src/utils/: data.rs
