[package]
name = "mr-rust-ml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
rand = "0.8.5"
plotters = "0.3.4"
serde_json = "1.0.96"
serde = { version = "1.0.96", features = ["derive"] }